Added delete-product feature
