# docs/swagger.json
@@ -155,6 +155,50 @@
         ]
       }
     },
+    "/products/delete-product/{id}": {
+      "delete": {
+        "summary": "Deletes Product",
+        "description": "Deletes product of given id",
+        "operationId": "deleteProduct",
+        "security": [
+          {
+            "BearerTokenAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response."
+          },
+          "401": {
+            "description": "Unauthenticated"
+          },
+          "403": {
+            "description": "Unauthorized to run such action."
+          },
+          "404": {
+            "description": "Product id not found"
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "Products"
+        ]
+      }
+    },
     "/products/detail/{id}": {
       "get": {
         "summary": "Get Product by Id",
